--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,10 +5,10 @@
       <form method="POST">
         {% csrf_token %}
         <fieldset class = "form-group">
-          <legend class = "border-bottom mb-4">Log In</legend>
+          <legend class = "border-bottom mb-4">Log In Here..</legend>
           {{ form|crispy }}
         </fieldset>
-        <div class="form-group">
+        <div class="form-group" id="unique-id">
           <button type="submit" class="btn btn-outline-info">Log In</button>
         </div>
       </form>
