--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -12,12 +12,12 @@
       <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class = "form-group">
-          <legend class = "border-bottom mb-4">Profile Info</legend>
+          <legend class = "border-bottom mb-4">Profile Information</legend>
           {{ u_form|crispy }}
           {{ p_form|crispy }}
         </fieldset>
         <div class="form-group">
-          <button type="submit" class="btn btn-outline-info">Update</button>
+          <button type="submit" class="btn btn-outline-info">Update Information</button>
         </div>
       </form>
     </div>
