--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,3 +1,4 @@
+<!---Blog base starts from here--->
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
@@ -19,3 +20,4 @@
       </div>
     </div>
 {% endblock content %}
+<!---Blog base starts from here--->
