--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -14,7 +14,7 @@
       </form>
       <div class="border-top pt-3">
         <small class = "text-muted">
-          Already Have an Account?<a class = "ml-2" href="{% url 'login' %}">Sign In</a>
+          Already Have an Account? or Want to create a new one?<a class = "ml-2" href="{% url 'login' %}">Sign In</a>
         </small>
       </div>
     </div>
