--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -5,7 +5,7 @@
         {% csrf_token %}
         <fieldset class = "form-group">
           <legend class = "border-bottom mb-4">Delete Post</legend>
-          <h2>This post will be deleted permanently "{{ object.title }}"</h2>
+          <h2>Are you sure you want to delete this post? "{{ object.title }}"</h2>
         </fieldset>
         <div class="form-group">
           <button type="submit" class="btn btn-outline-danger">Yes, Delete</button>
