--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -8,7 +8,7 @@
           <h2>Are you sure you want to delete this post? "{{ object.title }}"</h2>
         </fieldset>
         <div class="form-group">
-          <button type="submit" class="btn btn-outline-danger">Yes, Delete</button>
+          <button type="submit" class="btn btn-outline-danger">Yes, Delete this.</button>
             <a class="btn btn-outline-secondary" href ="{% url 'post-detail' object.id %}">Cancel</a>
         </div>
       </form>
